# demo_auth

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_12_1650-39d7d5b16543_add_users_table.py  2026_03_16_1004-07621bf36a20_create_role_table.py  2026_03_16_1008-7b555835d3b0_create_business_elem_table.py  2026_03_16_1151-b364c1bca710_add_fk_to_table_user.py  2026_03_16_1254-69d9abb148ed_add_relations_and_uk.py
app/: main.py
app/auth/: __init__.py  dependencies.py  jwt.py  views.py
app/core/: config.py
app/crud/: __init__.py  acess_rule.py  business_element.py  dep_views.py  role.py  user.py
app/database/: __init__.py  db_constructor.py  seed_data.py
app/models/: __init__.py  access_role.py  access_rule.py  business_element.py  role.py  user.py
app/schemas/: __init__.py  access_rule.py  category.py  product.py  token.py  user.py
app/utils/: __init__.py  const.py  helpers.py
app/views/: __init__.py  access_rule.py  category.py  product.py  user.py
